--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,6 @@
   text-align: center;
   height: 400px;
   width: 400px;
-  border-top: 1px solid rgba(0, 0, 0, 0.13);
   box-shadow: 0px 10px 10px rgba(26, 26, 26, 0.384);
 }
 .main_image img {
@@ -20,12 +19,33 @@
   -o-object-fit: contain;
      object-fit: contain;
 }
+.main_classifications {
+  margin-top: 3vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
+  width: 50%;
+  box-shadow: 0px 10px 10px rgba(26, 26, 26, 0.384);
+}
+.main_classifications_item {
+  height: 100%;
+  width: 33%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+}
+.main_classifications_item:hover {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.027);
+}
 .main_button {
   margin-top: 5%;
   height: 150px;
   width: 300px;
   font-size: 60px;
-  border-top: 1px solid rgba(0, 0, 0, 0.13);
+  border: none;
   box-shadow: 0px 10px 10px rgba(26, 26, 26, 0.384);
   background-color: white;
 }
