--- a/main.scss
+++ b/main.scss
@@ -10,7 +10,6 @@
 		text-align: center;
 		height: 400px;
 		width: 400px;
-		border-top: 1px solid rgba(0, 0, 0, 0.13);
 		box-shadow: 0px 10px 10px rgba(26, 26, 26, 0.384);
 		img {
 			margin-top: 10%;
@@ -20,12 +19,35 @@
 		}
 	}
 
+	&_classifications {
+		margin-top: 3vh;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		height: 10vh;
+		width: 50%;
+		box-shadow: 0px 10px 10px rgba(26, 26, 26, 0.384);
+
+		&_item {
+			height: 100%;
+			width: 33%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			font-size: 24px;
+			&:hover {
+				cursor: pointer;
+				background-color: rgba(0, 0, 0, 0.027);
+			}
+		}
+	}
+
 	&_button {
 		margin-top: 5%;
 		height: 150px;
 		width: 300px;
 		font-size: 60px;
-		border-top: 1px solid rgba(0, 0, 0, 0.13);
+		border: none;
 		box-shadow: 0px 10px 10px rgba(26, 26, 26, 0.384);
 		background-color: white;
 		&:hover {
